k8s/app/nginx-rtmp.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-app-nginx-rtmp
  labels:
    app: streaming-app-nginx-rtmp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaming-app-nginx-rtmp
  template:
    metadata:
      labels:
        app: streaming-app-nginx-rtmp
    spec:
      containers:
        - name: streaming-app-nginx-rtmp
          image: streaming-app-nginx-rtmp:latest
          ports:
            - containerPort: 80
            - containerPort: 1935 # RTMP port
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: streaming-app-nginx-rtmp-service
  labels:
    app: streaming-app-nginx-rtmp-service

spec:
  selector:
    app: streaming-app-nginx-rtmp
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
    - protocol: TCP
      port: 1935
      targetPort: 1935
      nodePort: 30002
