k8s/app/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: streaming-app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: streaming-app-backend-service
                port:
                  number: 8080
